<!-- PillMinder by Clyde Zuber -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/default_settings"
         android:onClick="intentInfoProfile"
         android:showAsAction="ifRoom|withText"
         android:title="@string/default_settings" />
       
    <item android:id="@+id/enter_rx"
         android:onClick="intentRxLabel"
         android:showAsAction="ifRoom|withText"
         android:title="@string/enter_rx" />
       
    <item android:id="@+id/current_rx"
         android:onClick="intentCurrentRx"
         android:showAsAction="ifRoom|withText"
         android:title="@string/current_rx" />
           
    <item android:id="@+id/disp_sched_rx"
         android:onClick="intentDisplaySchedule"
         android:showAsAction="ifRoom|withText"
         android:title="@string/disp_sched_rx" />
               
    <item android:id="@+id/disp_meds_rx"
         android:onClick="intentDisplayMeds"
         android:showAsAction="ifRoom|withText"
         android:title="@string/disp_meds_rx" />          
    
    <item android:id="@+id/history_rx"
         android:onClick="intentHistoryRx"
         android:showAsAction="ifRoom|withText"
         android:title="@string/history_rx" />
    
</menu>