<?xml version="1.0" encoding="utf-8"?>
<!-- PillMinder by Clyde Zuber -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MinderActivity" >

    <!-- ************************************************************************* -->

    <TableRow android:id="@+id/tableRow1" >

        <Button
            android:id="@+id/default_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonInfoProfile"
            android:text="@string/default_settings" />

        <LinearLayout          
            android:layout_weight="1" >
            <TextView
                style="@style/mindText"
                android:text="@string/explain_default" />
        </LinearLayout>
    </TableRow>

    <TableRow android:id="@+id/tableRow2" >

        <Button
            android:id="@+id/enter_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonRxLabel"
            android:text="@string/enter_rx" />

       <LinearLayout
            android:layout_weight="1" >
            <TextView
                style="@style/mindText"
                android:text="@string/explain_label" />
        </LinearLayout>
    </TableRow>

    <TableRow android:id="@+id/tableRow3" >

        <Button
            android:id="@+id/current_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonCurrentRx"
            android:text="@string/current_rx" />
        
       <LinearLayout
            android:layout_weight="1" >
            <TextView
                style="@style/mindText"
                android:text="@string/explain_current" />
        </LinearLayout>
    </TableRow>

    <TableRow android:id="@+id/tableRow4" >

        <Button
            android:id="@+id/disp_sched_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonDisplaySchedule"
            android:text="@string/disp_sched_rx" />
        
       <LinearLayout
            android:layout_weight="1" >
            <TextView
                style="@style/mindText"
                android:text="@string/explain_schedule" />
        </LinearLayout>
    </TableRow>

    <TableRow android:id="@+id/tableRow5" >

        <Button
            android:id="@+id/disp_meds_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonDisplayMeds"
            android:text="@string/disp_meds_rx" />
        
       <LinearLayout
            android:layout_weight="1" >
            <TextView
                style="@style/mindText"
                android:text="@string/explain_meds" />
        </LinearLayout>
    </TableRow>
    
    <TableRow android:id="@+id/tableRow6" >

        <Button
            android:id="@+id/history_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonHistoryRx"
            android:text="@string/history_rx" />
        
       <LinearLayout
            android:layout_weight="1" >
            <TextView
                style="@style/mindText"
                android:text="@string/explain_history" />
        </LinearLayout>
    </TableRow>

</TableLayout>